<resources>
    <string name="app_name">Thrift Wears</string>
    <string name="home">Home</string>
    <string name="wish_list">Wish List</string>
    <string name="search">Search</string>
    <string name="upload">Upload</string>
    <string name="profile">Profile</string>
    <string name="login">login</string>
    <string name="signup">signup</string>
    <string name="create_an_account">Create an account</string>
    <string name="let_s_get_started">Let\'s get started</string>
    <string name="use_an_email_or_continue_with_social_to_create_an_account">Use an email or continue with social to create an account</string>
    <string name="continue_with_email">Continue with email</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="close">close</string>
    <string name="back">back</string>
    <string name="or">or</string>
    <string name="log_in">Log in</string>
    <string name="hi">Hi</string>
    <string name="you_can_use_your_email_address_to_login_or_continue_with_your_social_account">You can use your email address to login, or continue with your social account</string>
    <string name="use_email">Use email</string>
    <string name="login_with_google">Login with Google</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="search_for_anything">Search for anything</string>
    <string name="item_image">item image</string>
    <string name="my_wear">My Wear</string>
    <string name="saved">Saved</string>
    <string name="local">Local</string>
    <string name="festive">Festive</string>
    <string name="fashion">Fashion</string>
    <string name="cart">cart</string>
    <string name="search_wears">Search Wears</string>
    <string name="find_your_next_item">Find your next favourite thing</string>
    <string name="member_since_2024">Member since 2024</string>
    <string name="view_all_listed_items">View all listed items</string>
    <string name="keep_tabs_on_your_preferred_items">Keep tabs on your preferred items</string>
    <string name="selling">Selling</string>
    <string name="payment_methods">Payment Methods</string>
    <string name="settings">Settings</string>
    <string name="item_details">Item Details</string>
    <string name="buy_now">Buy Now</string>
    <string name="seller_s_other_items">Seller\'s Other Items</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="show_password">Show Password</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="log_out">Log Out</string>
    <string name="saved_items">Saved Items</string>
    <string name="upload_an_item">Upload an item</string>
    <string name="photos">Photos</string>
    <string name="upload_photos">Upload Photos</string>
    <string name="take_photos">Take Photos</string>
    <string name="title">Title</string>
    <string name="category">Category</string>
    <string name="select_an_option">Select an option</string>
    <string name="button_continue">Continue</string>
    <string name="item_title">Item Title</string>
    <string name="description">Description</string>
    <string name="describe_this_item">Describe this item</string>
    <string name="welcome_to_thriftwears">Welcome to Thrift Wears</string>
    <string name="total">Total: £%1$s</string>
    <string name="contact_seller">Contact Seller</string>
    <string name="cart_title">Cart</string>
    <string name="save_item">Save Item</string>
    <string name="payment">Payment</string>
    <string name="phone_number">Phone Number</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="item_name">Item Name</string>
    <string name="_0_00">£0.00</string>
    <string name="_1">1</string>
    <string name="men">Men</string>
    <string name="women">Women</string>
    <string name="empty_cart">Empty Cart</string>
    <string name="nothing_to_see_here">Nothing to see here</string>
    <string name="price">Price</string>
    <string name="item_price">Item Price</string>
</resources>