<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginHorizontal="10dp"
    android:layout_marginVertical="20dp"
    android:id="@+id/signup_layout"
    tools:context=".Signup">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/create_an_account"
        android:textAlignment="center"
        android:layout_marginBottom="10dp"
        android:textColor="#000000"
        android:textSize="15sp"
        android:textStyle="bold"
        app:drawableStartCompat="@drawable/left"
        app:drawableEndCompat="@drawable/close"/>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/let_s_get_started"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="26sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/use_an_email_or_continue_with_social_to_create_an_account"
        android:textAlignment="textStart"
        android:textColor="@color/black"
        android:textSize="12sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_button"
            android:backgroundTint="@android:color/white"
            android:paddingHorizontal="5dp"
            android:layout_marginBottom="10dp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:text="@string/continue_with_email" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp">

            <!-- Left Line -->
            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:background="#B0B0B0" />

            <!-- "OR" Text -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/or"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <!-- Right Line -->
            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:background="#B0B0B0" />
        </LinearLayout>


        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/rounded_button"
            android:backgroundTint="@android:color/white"
            android:paddingHorizontal="25dp"
            android:text="@string/continue_with_google"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:icon="@drawable/google" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:text="@string/already_have_an_account"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="12sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/log_in"
            android:textAlignment="center"
            android:textColor="@color/primary"
            android:textSize="12sp" />

    </LinearLayout>

</LinearLayout>
