<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:paddingVertical="35dp"
    android:paddingHorizontal="8dp"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:id="@+id/login_activity"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/closeLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/log_in"
        android:textAlignment="center"
        android:layout_marginBottom="10dp"
        android:textColor="#000000"
        android:textSize="15sp"
        android:textStyle="bold"
        app:drawableStartCompat="@drawable/close" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hi"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="26sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/you_can_use_your_email_address_to_login_or_continue_with_your_social_account"
        android:textAlignment="textStart"
        android:textColor="@color/black"
        android:textSize="12sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/white"
        android:background="@color/white"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/loginEmail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="@color/lightGrey"
            android:background="@drawable/grey_rounded_button"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textAlignment="viewStart"
            android:textColor="@color/black"
            app:drawableEndCompat="@drawable/user" />


    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/loginPassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="@color/lightGrey"
            android:background="@drawable/grey_rounded_button"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textAlignment="viewStart"
            android:textColor="@color/black" />

        <TextView
            android:layout_marginTop="8dp"
            android:layout_marginHorizontal="10dp"
            android:id="@+id/togglePassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:text="@string/show_password"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="14sp"
            android:textStyle="bold|italic" />

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/loginEmailButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_button"
            android:backgroundTint="@android:color/white"
            android:paddingHorizontal="5dp"
            android:layout_marginBottom="10dp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:text="@string/use_email" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp">

            <!-- Left Line -->
            <view
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:background="#B0B0B0"
                class="android.widget.TextView"/>

            <!-- "OR" Text -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/or"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <!-- Right Line -->
            <view
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:background="#B0B0B0"
                class="android.widget.TextView"/>
        </LinearLayout>


        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/rounded_button"
            android:paddingHorizontal="25dp"
            android:text="@string/login_with_google"
            android:textStyle="bold"
            app:icon="@drawable/google" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:text="@string/don_t_have_an_account"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/goToSignup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_an_account"
            android:textAlignment="center"
            android:textColor="@color/primary"
            android:textSize="12sp" />

    </LinearLayout>

</LinearLayout>
