<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical"
    >

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:contentDescription="@string/search_for_anything"
        android:src="@drawable/search"
        app:tint="@color/gray_400"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/search_wears"
        android:textAlignment="center"
        android:fontFamily="@font/century_gothic"
        android:textSize="24sp"
        android:textColor="@color/gray_600"
        android:textStyle="bold"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/find_your_next_item"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/century_gothic"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textColor="@color/gray_600"
        android:textStyle="normal"
        />

</LinearLayout>