<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/upload"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:backgroundTint="@color/white"
    android:orientation="vertical"
    android:paddingHorizontal="8dp"
    android:paddingTop="25dp"
    android:scrollbars="none"
    tools:context=".Upload">

    <LinearLayout
        android:id="@+id/uploadBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="3dp"
        >

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="start|center_vertical"
            android:text="@string/upload_an_item"
            android:textColor="#000000"
            android:textSize="14sp"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/closeButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/back"
            android:src="@drawable/close" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="5dp"
        android:layout_marginTop="10dp"
        android:gravity="start"
        android:text="@string/photos"
        android:textColor="#000000"
        android:textSize="14sp"
        android:textStyle="normal" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:backgroundTint="@android:color/transparent"
        android:gravity="center_vertical"
        android:paddingHorizontal="15dp"
        android:text="@string/upload_photos"
        android:textColor="@color/black"
        app:cornerRadius="10dp"
        app:strokeColor="@color/lightGrey"
        app:strokeWidth="1dp"
        app:drawableRightCompat="@drawable/photo_upload" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:backgroundTint="@android:color/transparent"
        android:gravity="center_vertical"
        android:paddingHorizontal="15dp"
        android:maxWidth="320dp"
        android:text="@string/take_photos"
        android:textColor="@color/black"
        app:cornerRadius="10dp"
        app:strokeColor="@color/lightGrey"
        app:strokeWidth="1dp"
        app:drawableRightCompat="@drawable/camera" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="5dp"
        android:gravity="start"
        android:text="@string/title"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="normal" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:backgroundTint="@color/white"
        android:paddingVertical="1dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/grey_rounded_button"
            android:hint="@string/provide_a_descriptive_title"
            android:inputType="text|textAutoComplete|textAutoCorrect"
            android:maxWidth="320dp"
            android:maxLength="80"
            android:textSize="15sp" />

    </com.google.android.material.textfield.TextInputLayout>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="5dp"
        android:gravity="start"
        android:text="@string/category"
        android:textColor="#000000"
        android:textSize="14sp"
        android:textStyle="normal" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/select_an_option"
        app:boxBackgroundMode="outline">

        <AutoCompleteTextView
            android:maxWidth="320dp"
            android:hint="@string/category"
            android:id="@+id/dropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/grey_rounded_button"
            android:inputType="textAutoComplete|textAutoCorrect"
            android:paddingHorizontal="15dp"
            android:paddingVertical="13dp"
            android:textSize="15sp"
            app:drawableRightCompat="@drawable/dropdown" />

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        android:orientation="vertical"
        android:paddingVertical="20dp">

        <view
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_gravity="bottom"
            android:layout_marginVertical="15dp"
            class="android.widget.TextView"
            android:background="#FFFFFF" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_button"
            android:backgroundTint="@android:color/white"
            android:maxWidth="320dp"
            android:paddingHorizontal="25dp"
            android:text="@string/button_continue"
            android:textColor="@color/white"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>