<?xml version="1.0" encoding="utf-8"?>
<HorizontalScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/chips"
    android:scrollbars="none">

    <com.google.android.material.chip.ChipGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.material.chip.Chip
            android:id="@+id/savedChip"
            style="@style/Widget.MaterialComponents.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/saved"
            android:textColor="@color/black"
            app:checkedIconVisible="false"
            app:chipBackgroundColor="@color/lightGrey"
            app:chipEndPadding="12dp"
            app:chipStartPadding="12dp" />

        <com.google.android.material.chip.Chip
            android:id="@+id/localChip"
            style="@style/Widget.MaterialComponents.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:chipBackgroundColor="@color/lightGrey"
            app:chipStartPadding="12dp"
            app:chipEndPadding="12dp"
            app:checkedIconVisible="false"
            android:text="@string/local"
             />

        <com.google.android.material.chip.Chip
            android:id="@+id/festiveChip"
            style="@style/Widget.MaterialComponents.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:chipBackgroundColor="@color/lightGrey"
            app:chipStartPadding="12dp"
            app:chipEndPadding="12dp"
            app:checkedIconVisible="false"
            android:text="@string/festive"
             />

        <!-- Additional Chips -->
        <com.google.android.material.chip.Chip
            android:id="@+id/fashionChip"
            style="@style/Widget.MaterialComponents.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:chipBackgroundColor="@color/lightGrey"
            app:chipStartPadding="12dp"
            app:chipEndPadding="12dp"
            app:checkedIconVisible="false"
            android:text="@string/fashion"
            />

    </com.google.android.material.chip.ChipGroup>
</HorizontalScrollView>