<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:paddingHorizontal="20dp"
    android:paddingVertical="10dp">

    <com.nnorom.thriftwears.components.Title
        android:id="@+id/shoppingTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="5dp"
        android:textSize="20sp" />

    <LinearLayout
        android:id="@+id/shoppingHome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginVertical="10dp"
        >

        <ImageButton
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@drawable/rounded_button"
            android:backgroundTint="@color/lightGrey"
            android:layout_gravity="center"
            android:contentDescription="@string/cart"
            android:src="@drawable/home"
            />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:paddingHorizontal="10dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:textSize="15sp"
                android:text="@string/home"
                android:fontFamily="@font/century_gothic"
                android:textColor="@color/black"
                android:textStyle="normal"/>
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:textSize="12sp"
                android:fontFamily="@font/century_gothic"
                android:textColor="@color/gray_400"
                android:text="@string/view_all_listed_items"
                android:textStyle="normal"/>
        </LinearLayout>

    </LinearLayout>

    <com.nnorom.thriftwears.components.Title
        android:id="@+id/accountTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="5dp"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/paymentMethods"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:gravity="center"
        android:textSize="15sp"
        android:fontFamily="@font/century_gothic"
        android:text="@string/payment_methods"
        android:layout_marginVertical="10dp"
        android:layout_marginHorizontal="10dp"
        android:textColor="@color/black"
        android:textStyle="normal"/>

    <TextView
        android:id="@+id/accountLogOut"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:gravity="center"
        android:textSize="15sp"
        android:fontFamily="@font/century_gothic"
        android:text="@string/log_out"
        android:layout_marginVertical="10dp"
        android:layout_marginHorizontal="10dp"
        android:textColor="@android:color/holo_red_dark"
        android:textStyle="normal"/>


</LinearLayout>